[package]
name = "ecological-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
prometheus-parse = "0.2"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
